--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "xmlrpc": "^1.3.2"
   },
+  "homepage": "https://github.com/kickthedragon/fulfilltopia",
   "engines": {
     "node": ">= 0.6.x"
   },
