--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fulfilltopia",
-  "version": "0.0.3",
-  "description": "Fulfilltopia XMLRPC SDK for Node.js",
+  "version": "0.0.4",
+  "description": "Fulfilltopia Soap SDK for Node.js",
   "main": "index.js",
   "dependencies": {
-    "xmlrpc": "^1.3.2"
+    "soap": "*"
   },
   "homepage": "https://github.com/kickthedragon/fulfilltopia",
   "engines": {
@@ -16,7 +16,7 @@
   "keywords": [
     "Fulfilltopia",
     "SDK",
-    "XMLRPC",
+    "soap",
     "library",
     "node",
     "nodejs"
