--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fulfilltopia Soap SDK for Node.js",
   "main": "index.js",
   "dependencies": {
-    "strong-soap": "*"
+    "strong-soap": "*",
+    "node-soap": "*"
   },
   "homepage": "https://github.com/kickthedragon/fulfilltopia",
   "engines": {
