--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "fulfilltopia",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "Fulfilltopia Soap SDK for Node.js",
   "main": "index.js",
   "dependencies": {
     "request": "*",
-    "xml2js": "0.4.17"
+    "xml2json": "0.11.0"
   },
   "homepage": "https://github.com/kickthedragon/fulfilltopia",
   "engines": {
